--- a/output/工作規則-easy.json
+++ b/output/工作規則-easy.json
@@ -1,92 +1,121 @@
 [
   {
-    "article0": "第一條 目的",
-    "article": "目的 (總則)",
+    "title0": "第一章 總則",
+    "article0": "第一條  目的",
+    "article": "目的",
     "page": null,
     "body": "財團法人伊甸社會福利基金會(以下簡稱本會)，為達成捐助章程使命與目標，並使員工有所依循，特依勞動基準法及相關法令及本會組織章程、設立宗旨目的，訂定本規則。"
   },
   {
-    "article0": "第三條 適用範圍",
-    "article": "適用範圍 (總則)",
+    "title0": "第一章 總則",
+    "article0": "第三條  適用範圍",
+    "article": "適用範圍",
     "page": null,
     "body": "凡受本會僱用從事工作獲致工資者，除交通事業部人員另訂其工作規則外，餘均適用之。"
   },
   {
-    "article0": "第五條 其他",
-    "article": "其他 (總則)",
+    "title0": "第一章 總則",
+    "article0": "第五條\t其他",
+    "article": "其他",
     "page": null,
     "body": "庇護性就業者因工作特殊性，其薪資、福利、終止勞動契約等事項，另以專章訂之。"
   },
   {
-    "article0": "第六條 聘僱原則",
+    "title0": "第二章 聘僱",
+    "article0": "第六條  聘僱原則",
     "article": "聘僱原則",
     "page": null,
     "body": "各級主管應依據年度預算編制之職務及其對應的職能資格，進行對外招募及遴選作業。非年度預算編制內之進用人力需求，應報請董監事會(或常董會)核准增編後始得為之。"
   },
   {
-    "article0": "第七條 聘僱限制",
+    "title0": "第二章 聘僱",
+    "article0": "第七條  聘僱限制",
     "article": "聘僱限制",
     "page": null,
-    "body": "進用人員應遵守利益迴避原則：\n一、本會具行政權之主管任用人員時，應迴避任用配偶及二等 （含）親屬（含血親、姻親）為該部門員工或其轄下單位員 工；各級主管的上級主管之配偶及二等（含）親屬（含血親、 姻親），亦應迴避任用。但基於人才廣納原則，經報請執行長核准者，不在此限。\n二、任用人員若為服務使用者之配偶或二等（含）親屬（含血親、姻親）時，不得為服務使用者所在單位之直接照顧人員。\n三、為落實責信，本條文適用範圍與對象亦包含本會董監事、委員會委員及顧問。 人員任用需符合本會任用流程，未依流程任用者，視同任用未完成，人事單位得不受理任用到職。"
+    "body": "進用人員應遵守利益迴避原則：\n一、本會具行政權之主管任用人員時，應迴避任用配偶及二等（含）親屬（含血親、姻親）為該部門員工或其轄下單位員 工；各級主管的上級主管之配偶及二等（含）親屬（含血親、姻親），亦應迴避任用。但基於人才廣納原則，經報請執行長核准者，不在此限。\n二、任用人員若為服務使用者之配偶或二等（含）親屬（含血親、姻親）時，不得為服務使用者所在單位之直接照顧人員。\n三、為落實責信，本條文適用範圍與對象亦包含本會董監事、委員會委員及顧問。人員任用需符合本會任用流程，未依流程任用者，視同任用未完成，人事單位得不受理任用到職。"
   },
   {
-    "article0": "第八條 聘僱決行",
+    "title0": "第二章 聘僱",
+    "article0": "第八條\t聘僱決行",
     "article": "聘僱決行",
     "page": null,
-    "body": "聘僱決行，由直屬主管提名，直屬上一級主管審核任用。其審核決行如下：\n一、四級員工由三級主管提名，二級主管審核後任用。\n二、三級員工由各單位二級主管提名，一級主管審核後任用。三、二級員工由各單位一級主管報請執行長審核任用。\n四、一級非主管由執行長提名，經董事長同意任用。\n五、一級主管則由執行長提名，經董事長同意，常董會會議通過任用，並送董事會核備。"
+    "body": "聘僱決行，由直屬主管提名，直屬上一級主管審核任用。其審核決行如下：\n一、四級員工由三級主管提名，二級主管審核後任用。\n二、三級員工由各單位二級主管提名，一級主管審核後任用。\n三、二級員工由各單位一級主管報請執行長審核任用。\n四、一級非主管由執行長提名，經董事長同意任用。\n五、一級主管則由執行長提名，經董事長同意，常董會會議通過任用，並送董事會核備。"
   },
   {
-    "article0": "第九條 新人訓練",
-    "article": "新人訓練 (聘僱)",
+    "title0": "第二章 聘僱",
+    "article0": "第九條\t新人訓練",
+    "article": "新人訓練",
     "page": null,
     "body": "新進人員須接受本會安排之各項訓練，其訓練評量列入試用期考核及年終考核。"
   },
   {
-    "article0": "第十條 報到手續",
-    "article": "報到手續 (聘僱)",
+    "title0": "第二章 聘僱",
+    "article0": "第十條\t報到手續",
+    "article": "報到手續",
     "page": null,
-    "body": "新進人員於報到時應依誠信原則填寫員工基本資料，並誠實勾選是否有配偶或二等（含）親屬（含血親、姻親）任職於本會或為本會服務使用者等選項。 新進員工應於報到時繳交下列資料：\n一、繳驗有關證件，如學經歷證件、技術證照及國民身分證等(本會將保留影本，正本核對後發還)。\n二、其他本會得要求與工作相關或法有明訂之文件。第十一條 勞動契約 本會應依業務需要與員工簽訂定期契約、不定期契約或庇護性就業者契約，契約內容以書面為之。 前項契約依勞動基準法相關規定辦理。第十二條 新進試用 本會得與新進員工約定試用。試用期間以進用日起三個月內為原則，但具特殊技能、專長、經歷，經專案簽准者，不在此限。 主管應設定試用期間之考核日期及考核內容，對於考核表現欠佳者，主管應說明欠佳項目及原因，並即時給予輔導及提供改善方式。考核及輔導過程應有書面記錄。 試用考核不合格者，須終止契約時，依勞基法第十一、十二、十 三、十六條及勞工退休金條例第十二條等相關規定辦理，工資發放至停止僱用日為止。"
+    "body": "新進人員於報到時應依誠信原則填寫員工基本資料，並誠實勾選是否有配偶或二等（含）親屬（含血親、姻親）任職於本會或為本會服務使用者等選項。新進員工應於報到時繳交下列資料：\n一、繳驗有關證件，如學經歷證件、技術證照及國民身分證等(本會將保留影本，正本核對後發還)。\n二、其他本會得要求與工作相關或法有明訂之文件。"
   },
   {
+    "title0": "第二章 聘僱",
+    "article0": "第十一條 勞動契約",
+    "article": "勞動契約",
+    "page": null,
+    "body": "本會應依業務需要與員工簽訂定期契約、不定期契約或庇護性就業者契約，契約內容以書面為之。前項契約依勞動基準法相關規定辦理。"
+  },
+  {
+    "title0": "第二章 聘僱",
+    "article0": "第十二條 新進試用",
+    "article": "新進試用",
+    "page": null,
+    "body": "本會得與新進員工約定試用。試用期間以進用日起三個月內為原則，但具特殊技能、專長、經歷，經專案簽准者，不在此限。 主管應設定試用期間之考核日期及考核內容，對於考核表現欠佳者，主管應說明欠佳項目及原因，並即時給予輔導及提供改善方式。考核及輔導過程應有書面記錄。試用考核不合格者，須終止契約時，依勞基法第十一、十二、十 三、十六條及勞工退休金條例第十二條等相關規定辦理，工資發放至停止僱用日為止。"
+  },
+  {
+    "title0": "第二章 聘僱",
     "article0": "第十五條 工作年資計算",
-    "article": "工作年資計算 (聘僱)",
+    "article": "工作年資計算",
     "page": null,
-    "body": "本會工作年資之計算原則如下：\n一、年資採計，以員工受僱之日起算（含本會適用勞動基準法前之 工作年資與試用期年資）。\n二、勞動契約終止而另訂聘僱新約者，其年資重新計算。\n三、留職停薪者，其留職停薪期間年資不予計算，法令另有規定者除外。\n四、關係組織互調人員，年資照計。第十六條 (刪除)"
+    "body": "本會工作年資之計算原則如下：\n一、年資採計，以員工受僱之日起算（含本會適用勞動基準法前之工作年資與試用期年資）。\n二、勞動契約終止而另訂聘僱新約者，其年資重新計算。\n三、留職停薪者，其留職停薪期間年資不予計算，法令另有規定者除外。"
   },
   {
+    "title0": "第五章 工作時間、給假、請假",
     "article0": "第十九條 工作時間",
-    "article": "工作時間 (工作時間、給假、請假)",
+    "article": "工作時間",
     "page": null,
-    "body": "本會工作時間為每週一至週五 8:30-12:30、13:30-17:30，每日工作時間以八小時為原則，正常工作時間每週不得超過四十小時，每七日中應有二日休息，其中一日為例假，一日為休息日，繼續工作四小時至少休息三十分鐘。 特殊專業、監督管理、間歇性工作人員及因業務需要與前項工作時間不同者，其工作時間另訂之，但不得違反勞基法之規定。"
+    "body": "本會工作時間為每週一至週五 8:30-12:30、13:30-17:30，每日工作時間以八小時為原則，正常工作時間每週不得超過四十小時，每七日中應有二日休息，其中一日為例假，一日為休息日，繼續工作四小時至少休息三十分鐘。特殊專業、監督管理、間歇性工作人員及因業務需要與前項工作時間不同者，其工作時間另訂之，但不得違反勞基法之規定。"
   },
   {
+    "title0": "第五章 工作時間、給假、請假",
     "article0": "第二十條 調整工時",
-    "article": "調整工時 (工作時間、給假、請假)",
+    "article": "調整工時",
     "page": null,
-    "body": "員工申請異動為部分工時者，需經一級主管同意，二級主管(含)以上須經執行長同意，一級主管另須經董事長同意，並於異動文註明 調整之具體事實與工作內容，送交人事單位備查。"
+    "body": "員工申請異動為部分工時者，需經一級主管同意，二級主管(含)以上須經執行長同意，一級主管另須經董事長同意，並於異動文註明調整之具體事實與工作內容，送交人事單位備查。"
   },
   {
+    "title0": "第五章 工作時間、給假、請假",
     "article0": "第二十六條 給假規定",
-    "article": "給假規定 (工作時間、給假、請假)",
+    "article": "給假規定",
     "page": null,
-    "body": "因業務需要且經員工同意，本會得依法調移例假日(惟不得使員工連續工作超過六日)及休假日。 本會給假規定及作業方式如下：\n一、各類公職人員選舉罷免投票日，具投票權且該日出勤之員 工，加給該工作時間之工資(扣除投票時間)，且不妨礙其投票。原毋須出勤者，不另給假給薪。\n二、有關地震、颱風等天然災害發生時上班規定，依本會「天然災害停止辦公作業辦法」執行。\n三、加班申請換補休假，依員工自由意願選擇補休並經本會同意者，按員工工作之時數計算補休時數。補休期限依勞動基準 法及其施行細則辦理。補休期限屆期或契約終止未補休之時數，依勞動基準法規定發給工資。\n(一) 四、特別休假 (一)全薪假\n(一) 全薪假 (二)服務六個月以上一年未滿者，三日。\n(二) 服務六個月以上一年未滿者，三日。 (三)服務一年以上二年未滿者，七日。\n(三) 服務一年以上二年未滿者，七日。 (四)服務二年以上三年未滿者，十日。\n(四) 服務二年以上三年未滿者，十日。 (五)服務三年以上五年未滿者，每年十四日。\n(五) 服務三年以上五年未滿者，每年十四日。 (六)服務五年以上十年未滿者，每年十五日。\n(六) 服務五年以上十年未滿者，每年十五日。 (七)服務十年以上者，每一年加給一日，加至三十日為止。\n(七) 服務十年以上者，每一年加給一日，加至三十日為止。 (八)特別休假以員工受僱當日起 算，每一週年之期間。但其工作六個月以上一年未滿者，為取得特別休假權利後六個月之期間。\n(八) 特別休假以員工受僱當日起 算，每一週年之期間。但其工作六個月以上一年未滿者，為取得特別休假權利後六個月之期間。 (九)特別休假由員工自行排定並依請假規定辦理，但本會基於業務上之急迫需求或因員工個人因素得經勞雇雙方協商調整。因年度終結或契約終止而未休之日數，發給工資。但年度終結未休之日數，經勞雇雙方協商遞延至次一年度實施者，於次一年度終結或契約終止仍未休之日數，依勞動基準法規定發給工資。未休假工資依未休畢之特別休假日數，乘以其一日工資計算。\n(九) 特別休假由員工自行排定並依請假規定辦理，但本會基於業務上之急迫需求或因員工個人因素得經勞雇雙方協商調整。因年度終結或契約終止而未休之日數，發給工資。但年度終結未休之日數，經勞雇雙方協商遞延至次一年度實施者，於次一年度終結或契約終止仍未休之日數，依勞動基準法規定發給工資。未休假工資依未休畢之特別休假日數，乘以其一日工資計算。 (十)未休假工資計算之基準，依勞動基準法及其施行細則規定辦理。\n(十) 未休假工資計算之基準，依勞動基準法及其施行細則規定辦理。 (十一)特別休假每次申請，以一小時為最小請假單位。\n(十一) 特別休假每次申請，以一小時為最小請假單位。"
+    "body": "因業務需要且經員工同意，本會得依法調移例假日(惟不得使員工連續工作超過六日)及休假日。本會給假規定及作業方式如下：\n一、各類公職人員選舉罷免投票日，具投票權且該日出勤之員 工，加給該工作時間之工資(扣除投票時間)，且不妨礙其投票。原毋須出勤者，不另給假給薪。\n二、有關地震、颱風等天然災害發生時上班規定，依本會「天然災害停止辦公作業辦法」執行。\n三、加班申請換補休假，依員工自由意願選擇補休並經本會同意者，按員工工作之時數計算補休時數。補休期限依勞動基準法及其施行細則辦理。補休期限屆期或契約終止未補休之時數，依勞動基準法規定發給工資。\n四、特別休假\n(一)全薪假\n(二)服務六個月以上一年未滿者，三日。\n(三)服務一年以上二年未滿者，七日。\n(四)服務二年以上三年未滿者，十日。\n(五)服務三年以上五年未滿者，每年十四日。\n(六)服務五年以上十年未滿者，每年十五日。\n(七)服務十年以上者，每一年加給一日，加至三十日為止。\n(八)特別休假以員工受僱當日起 算，每一週年之期間。但其工作六個月以上一年未滿者，為取得特別休假權利後六個月之期間。\n(九)特別休假由員工自行排定並依請假規定辦理，但本會基於業務上之急迫需求或因員工個人因素得經勞雇雙方協商調整。因年度終結或契約終止而未休之日數，發給工資。但年度終結未休之日數，經勞雇雙方協商遞延至次一年度實施者，於次一年度終結或契約終止仍未休之日數，依勞動基準法規定發給工資。未休假工資依未休畢之特別休假日數，乘以其一日工資計算。\n(十)未休假工資計算之基準，依勞動基準法及其施行細則規定辦理。\n(十一)特別休假每次申請，以一小時為最小請假單位。"
   },
   {
-    "article0": "四、特別休假 (一)全薪假",
-    "article": "特別休假 (一)全薪假",
+    "title0": "第五章 工作時間、給假、請假@@第二十六條 給假規定",
+    "article0": "四、特別休假",
+    "article": "特別休假",
     "page": null,
-    "body": "(二) 全薪假 (二)服務六個月以上一年未滿者，三日。\n(二) 給假規定 (工作時間、給假、請假) 服務六個月以上一年未滿者，三日。 (二)\n服務六個月以上一年未滿者，三日。 (三)服務一年以上二年未滿者，七日。\n(三) 給假規定 (工作時間、給假、請假) 服務一年以上二年未滿者，七日。 (三)\n服務一年以上二年未滿者，七日。 (四)服務二年以上三年未滿者，十日。\n(四) 給假規定 (工作時間、給假、請假) 服務二年以上三年未滿者，十日。 (五)\n服務二年以上三年未滿者，十日。 (五)服務三年以上五年未滿者，每年十四日。\n(五) 給假規定 (工作時間、給假、請假) 服務三年以上五年未滿者，每年十四日。 (五)\n服務三年以上五年未滿者，每年十四日。 (六)服務五年以上十年未滿者，每年十五日。\n(六) 給假規定 (工作時間、給假、請假) 服務五年以上十年未滿者，每年十五日。 (七)\n服務五年以上十年未滿者，每年十五日。 (七)服務十年以上者，每一年加給一日，加至三十日為止。\n(七) 給假規定 (工作時間、給假、請假) 服務十年以上者，每一年加給一日，加至三十日為止。 (八)\n服務十年以上者，每一年加給一日，加至三十日為止。 (八)特別休假以員工受僱當日起 算，每一週年之期間。但其工作六個月以上一年未滿者，為取得特別休假權利後六個月之期間。\n(八) 給假規定 (工作時間、給假、請假) 特別休假以員工受僱當日起 算，每一週年之期間。但其工作六個月以上一年未滿者，為取得特別休假權利後六個月之期間。 (九)\n特別休假以員工受僱當日起 算，每一週年之期間。但其工作六個月以上一年未滿者，為取得特別休假權利後六個月之期間。 (九)特別休假由員工自行排定並依請假規定辦理，但本會基於業務上之急迫需求或因員工個人因素得經勞雇雙方協商調整。因年度終結或契約終止而未休之日數，發給工資。但年度終結未休之日數，經勞雇雙方協商遞延至次一年度實施者，於次一年度終結或契約終止仍未休之日數，依勞動基準法規定發給工資。未休假工資依未休畢之特別休假日數，乘以其一日工資計算。\n(九) 給假規定 (工作時間、給假、請假) 特別休假由員工自行排定並依請假規定辦理，但本會基於業務上之急迫需求或因員工個人因素得經勞雇雙方協商調整。因年度終結或契約終止而未休之日數，發給工資。但年度終結未休之日數，經勞雇雙方協商遞延至次一年度實施者，於次一年度終結或契約終止仍未休之日數，依勞動基準法規定發給工資。未休假工資依未休畢之特別休假日數，乘以其一日工資計算。 (九)\n特別休假由員工自行排定並依請假規定辦理，但本會基於業務上之急迫需求或因員工個人因素得經勞雇雙方協商調整。因年度終結或契約終止而未休之日數，發給工資。但年度終結未休之日數，經勞雇雙方協商遞延至次一年度實施者，於次一年度終結或契約終止仍未休之日數，依勞動基準法規定發給工資。未休假工資依未休畢之特別休假日數，乘以其一日工資計算。 (十)未休假工資計算之基準，依勞動基準法及其施行細則規定辦理。\n(十) 給假規定 (工作時間、給假、請假) 未休假工資計算之基準，依勞動基準法及其施行細則規定辦理。 (十)\n未休假工資計算之基準，依勞動基準法及其施行細則規定辦理。 (十一)特別休假每次申請，以一小時為最小請假單位。\n(十一) 給假規定 (工作時間、給假、請假) 特別休假每次申請，以一小時為最小請假單位。 (十一)\n特別休假每次申請，以一小時為最小請假單位。"
+    "body": "\n(一)全薪假\n(二)服務六個月以上一年未滿者，三日。\n(三)服務一年以上二年未滿者，七日。\n(四)服務二年以上三年未滿者，十日。\n(五)服務三年以上五年未滿者，每年十四日。\n(六)服務五年以上十年未滿者，每年十五日。\n(七)服務十年以上者，每一年加給一日，加至三十日為止。\n(八)特別休假以員工受僱當日起 算，每一週年之期間。但其工作六個月以上一年未滿者，為取得特別休假權利後六個月之期間。\n(九)特別休假由員工自行排定並依請假規定辦理，但本會基於業務上之急迫需求或因員工個人因素得經勞雇雙方協商調整。因年度終結或契約終止而未休之日數，發給工資。但年度終結未休之日數，經勞雇雙方協商遞延至次一年度實施者，於次一年度終結或契約終止仍未休之日數，依勞動基準法規定發給工資。未休假工資依未休畢之特別休假日數，乘以其一日工資計算。\n(十)未休假工資計算之基準，依勞動基準法及其施行細則規定辦理。\n(十一)特別休假每次申請，以一小時為最小請假單位。"
   },
   {
+    "title0": "第五章 工作時間、給假、請假",
     "article0": "第二十七條 請假手續",
-    "article": "請假手續 (工作時間、給假、請假)",
+    "article": "請假手續",
     "page": null,
-    "body": "除規定之休假日，在工作時間內需請假者均應依下列規則辦理請假手續：\n一、請假依各假別最低請假時數為計算基礎。\n二、請假須事前經主管核准並辦妥請假手續；因特殊情形，急病或不可抗拒之因素，未及事先請假時，當日上班一小時內應先通知單位主管或人事單位，並於銷假後二日內補辦請假手續。\n三、離開工作崗位五個工作日(含)以上，須填寫工作移交清單等有關文件並辦妥交接手續。\n(一) 四、請假核准權限 (一)四級員工請假二個工作日(含)以內得全由三級主管核准；三個工作日至四個工作日得由二級主管核准；五個工作日 (含)以上，需填長期請假文至一級主管核准。\n(一) 四級員工請假二個工作日(含)以內得全由三級主管核准；三個工作日至四個工作日得由二級主管核准；五個工作日 (含)以上，需填長期請假文至一級主管核准。 (二)三級員工請假四個工作日(含)以內，由二級主管核准；五個工作日(含)以上，需填長期請假文至一級主管核准。\n(二) 三級員工請假四個工作日(含)以內，由二級主管核准；五個工作日(含)以上，需填長期請假文至一級主管核准。 (三)二級員工請假四個工作日(含)以內，由一級主管核准；五個工作日以上，需填長期請假文至執行長核准。\n(三) 二級員工請假四個工作日(含)以內，由一級主管核准；五個工作日以上，需填長期請假文至執行長核准。 (四)一級主管請假四個工作日(含)以內，由執行長核准；五個工作日以上，需填長期請假文至董事長核准；請假超過三十日(含)以上需經常董會核准。\n(四) 一級主管請假四個工作日(含)以內，由執行長核准；五個工作日以上，需填長期請假文至董事長核准；請假超過三十日(含)以上需經常董會核准。 (五)工作時間內經公告須參加之重要集會(如充電營、發電營、退修會、週年紀念活動及臨時動員等集體活動)，屬區域性質者，請假須經一級主管核准；屬全會性質者，請假須經執行長核准。\n(五) 工作時間內經公告須參加之重要集會(如充電營、發電營、退修會、週年紀念活動及臨時動員等集體活動)，屬區域性質者，請假須經一級主管核准；屬全會性質者，請假須經執行長核准。 員工未依上述規定辦理請假或捏造請假事由，經查明屬實者，以曠職論並按其情節議處，主管亦負連帶責任。"
+    "body": "除規定之休假日，在工作時間內需請假者均應依下列規則辦理請假手續：\n一、請假依各假別最低請假時數為計算基礎。\n二、請假須事前經主管核准並辦妥請假手續；因特殊情形，急病或不可抗拒之因素，未及事先請假時，當日上班一小時內應先通知單位主管或人事單位，並於銷假後二日內補辦請假手續。\n三、離開工作崗位五個工作日(含)以上，須填寫工作移交清單等有關文件並辦妥交接手續。\n四、請假核准權限\n(一)四級員工請假二個工作日(含)以內得全由三級主管核准；三個工作日至四個工作日得由二級主管核准；五個工作日 (含)以上，需填長期請假文至一級主管核准。\n(二)三級員工請假四個工作日(含)以內，由二級主管核准；五個工作日(含)以上，需填長期請假文至一級主管核准。\n(三)二級員工請假四個工作日(含)以內，由一級主管核准；五個工作日以上，需填長期請假文至執行長核准。\n(四)一級主管請假四個工作日(含)以內，由執行長核准；五個工作日以上，需填長期請假文至董事長核准；請假超過三十日(含)以上需經常董會核准。\n(五)工作時間內經公告須參加之重要集會(如充電營、發電營、退修會、週年紀念活動及臨時動員等集體活動)，屬區域性質者，請假須經一級主管核准；屬全會性質者，請假須經執行長核准。員工未依上述規定辦理請假或捏造請假事由，經查明屬實者，以曠職論並按其情節議處，主管亦負連帶責任。"
   },
   {
-    "article0": "四、請假核准權限 (一)四級員工請假二個工作日(含)以內得全由三級主管核准；三個工作日至四個工作日得由二級主管核准；五個工作日 (含)以上，需填長期請假文至一級主管核准。",
-    "article": "請假核准權限 (一)四級員工請假二個工作日(含)以內得全由三級主管核准；三個工作日至四個工作日得由二級主管核准；五個工作日 (含)以上，需填長期請假文至一級主管核准。",
+    "title0": "第五章 工作時間、給假、請假@@第二十七條 請假手續",
+    "article0": "四、請假核准權限",
+    "article": "請假核准權限",
     "page": null,
-    "body": "(一) 四級員工請假二個工作日(含)以內得全由三級主管核准；三個工作日至四個工作日得由二級主管核准；五個工作日 (含)以上，需填長期請假文至一級主管核准。 (二)三級員工請假四個工作日(含)以內，由二級主管核准；五個工作日(含)以上，需填長期請假文至一級主管核准。\n(二) 請假手續 (工作時間、給假、請假) 三級員工請假四個工作日(含)以內，由二級主管核准；五個工作日(含)以上，需填長期請假文至一級主管核准。 (二)\n三級員工請假四個工作日(含)以內，由二級主管核准；五個工作日(含)以上，需填長期請假文至一級主管核准。 (三)二級員工請假四個工作日(含)以內，由一級主管核准；五個工作日以上，需填長期請假文至執行長核准。\n(三) 請假手續 (工作時間、給假、請假) 二級員工請假四個工作日(含)以內，由一級主管核准；五個工作日以上，需填長期請假文至執行長核准。 (四)\n二級員工請假四個工作日(含)以內，由一級主管核准；五個工作日以上，需填長期請假文至執行長核准。 (四)一級主管請假四個工作日(含)以內，由執行長核准；五個工作日以上，需填長期請假文至董事長核准；請假超過三十日(含)以上需經常董會核准。\n(四) 請假手續 (工作時間、給假、請假) 一級主管請假四個工作日(含)以內，由執行長核准；五個工作日以上，需填長期請假文至董事長核准；請假超過三十日(含)以上需經常董會核准。 (五)\n一級主管請假四個工作日(含)以內，由執行長核准；五個工作日以上，需填長期請假文至董事長核准；請假超過三十日(含)以上需經常董會核准。 (五)工作時間內經公告須參加之重要集會(如充電營、發電營、退修會、週年紀念活動及臨時動員等集體活動)，屬區域性質者，請假須經一級主管核准；屬全會性質者，請假須經執行長核准。\n(五) 請假手續 (工作時間、給假、請假) 工作時間內經公告須參加之重要集會(如充電營、發電營、退修會、週年紀念活動及臨時動員等集體活動)，屬區域性質者，請假須經一級主管核准；屬全會性質者，請假須經執行長核准。 (五)\n工作時間內經公告須參加之重要集會(如充電營、發電營、退修會、週年紀念活動及臨時動員等集體活動)，屬區域性質者，請假須經一級主管核准；屬全會性質者，請假須經執行長核准。 員工未依上述規定辦理請假或捏造請假事由，經查明屬實者，以曠職論並按其情節議處，主管亦負連帶責任。"
+    "body": "\n(一)四級員工請假二個工作日(含)以內得全由三級主管核准；三個工作日至四個工作日得由二級主管核准；五個工作日 (含)以上，需填長期請假文至一級主管核准。\n(二)三級員工請假四個工作日(含)以內，由二級主管核准；五個工作日(含)以上，需填長期請假文至一級主管核准。\n(三)二級員工請假四個工作日(含)以內，由一級主管核准；五個工作日以上，需填長期請假文至執行長核准。\n(四)一級主管請假四個工作日(含)以內，由執行長核准；五個工作日以上，需填長期請假文至董事長核准；請假超過三十日(含)以上需經常董會核准。\n(五)工作時間內經公告須參加之重要集會(如充電營、發電營、退修會、週年紀念活動及臨時動員等集體活動)，屬區域性質者，請假須經一級主管核准；屬全會性質者，請假須經執行長核准。\n員工未依上述規定辦理請假或捏造請假事由，經查明屬實者，以曠職論並按其情節議處，主管亦負連帶責任。"
   }
 ]
